Fix HTML static render

--- a/list-users.html
+++ b/list-users.html
@@ -6,112 +6,29 @@
 
 <style>
 :root {
-  --primary: #4f46e5;
-  --success: #16a34a;
-  --bg: #f8fafc;
-  --text: #1f2937;
-  --muted: #6b7280;
+  --primary:#4f46e5;
+  --success:#16a34a;
 }
-
 body {
-  font-family: 'Segoe UI', Arial, sans-serif;
-  background: linear-gradient(120deg, #eef2ff, #f8fafc);
-  margin: 0;
-  padding: 20px;
+  font-family: Segoe UI, Arial;
+  background:#f8fafc;
+  padding:20px;
 }
-
-h2 {
-  text-align: center;
-  color: var(--primary);
-  margin-bottom: 20px;
-}
-
-/* ===== TABLE ===== */
 table {
-  width: 100%;
-  max-width: 1400px;
-  margin: auto;
-  border-collapse: collapse;
-  background: white;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+  width:100%;
+  background:white;
+  border-collapse:collapse;
 }
-
-th, td {
-  padding: 10px;
-  font-size: 13px;
-  text-align: center;
-  border-bottom: 1px solid #e5e7eb;
+th,td {
+  padding:10px;
+  border-bottom:1px solid #e5e7eb;
+  text-align:center;
 }
-
-thead th {
-  background: var(--primary);
-  color: white;
-}
-
-.group-exp {
-  background: #6366f1;
-}
-
-.group-dest {
-  background: #16a34a;
-}
-
-tbody tr:nth-child(even) {
-  background: #f9fafb;
-}
-
-.amount {
-  font-weight: bold;
-}
-
-.code {
-  color: var(--primary);
-  font-weight: bold;
-}
-
-.date {
-  font-size: 11px;
-  color: var(--muted);
-}
-
-/* ===== TOTAL FORM ===== */
+th { background:var(--primary); color:white; }
 .total-form {
-  max-width: 900px;
-  margin: 40px auto;
-  background: white;
-  padding: 25px;
-  border-radius: 14px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-}
-
-.total-form h3 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: var(--success);
-}
-
-.total-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-}
-
-.total-grid label {
-  font-size: 13px;
-  color: var(--muted);
-}
-
-.total-grid input {
-  width: 100%;
-  padding: 12px;
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-  border-radius: 8px;
-  border: 1px solid #e5e7eb;
-  background: #f9fafb;
+  margin-top:30px;
+  background:white;
+  padding:20px;
 }
 </style>
 </head>
@@ -120,140 +37,68 @@ tbody tr:nth-child(even) {
 
 <h2>💸 Liste des transferts</h2>
 
-<!-- Conteneur du tableau + formulaire -->
 <div id="content" style="display:none;">
 
 <table>
 <thead>
 <tr>
-  <th colspan="7" class="group-exp">EXPÉDITEUR</th>
-  <th colspan="7" class="group-dest">DESTINATAIRE</th>
-</tr>
-<tr>
-  <th>Prénom</th>
-  <th>Nom</th>
-  <th>Téléphone</th>
-  <th>Origine</th>
-  <th>Montant</th>
-  <th>Frais</th>
-  <th>Code</th>
-
-  <th>Prénom</th>
-  <th>Nom</th>
-  <th>Téléphone</th>
-  <th>Destination</th>
-  <th>Reçu</th>
-  <th>Mode</th>
-  <th>Date</th>
+<th>Expéditeur</th><th>Montant</th><th>Frais</th>
+<th>Destinataire</th><th>Reçu</th><th>Code</th><th>Date</th>
 </tr>
 </thead>
-
 <tbody id="usersTable">
-<tr>
-  <td colspan="14">Chargement...</td>
-</tr>
+<tr><td colspan="7">Chargement...</td></tr>
 </tbody>
 </table>
 
-<!-- ===== FORMULAIRE DES TOTAUX ===== -->
 <div class="total-form">
-  <h3>📊 Totaux généraux</h3>
-
-  <div class="total-grid">
-    <div>
-      <label>Total montants envoyés</label>
-      <input id="totalAmount" readonly value="0">
-    </div>
-
-    <div>
-      <label>Total frais</label>
-      <input id="totalFees" readonly value="0">
-    </div>
-
-    <div>
-      <label>Total montants reçus</label>
-      <input id="totalReceived" readonly value="0">
-    </div>
-  </div>
+<h3>📊 Totaux</h3>
+<input id="totalAmount" readonly>
+<input id="totalFees" readonly>
+<input id="totalReceived" readonly>
 </div>
 
 </div>
 
 <script>
-// ===== DEMANDER LE CODE =====
-const accessCode = prompt("Veuillez entrer le code d'accès pour voir le formulaire :");
-
-if (accessCode !== "123") {
-  alert("Code incorrect ! Accès refusé.");
-  document.body.innerHTML = "<h2 style='text-align:center;color:red;'>Accès refusé</h2>";
+const code = prompt("Code d'accès");
+if (code !== "123") {
+  document.body.innerHTML = "<h2>Accès refusé</h2>";
 } else {
   document.getElementById('content').style.display = "block";
   loadUsers();
 }
 
-// ===== FONCTION CHARGEMENT DES TRANSFERTS =====
-async function loadUsers() {
-  try {
-    const res = await fetch('https://monapi-bf4o.onrender.com/users/json');
-    const users = await res.json();
+async function loadUsers(){
+  const res = await fetch('/users/json');
+  const users = await res.json();
 
-    const table = document.getElementById('usersTable');
-    table.innerHTML = '';
+  let ta=0, tf=0, tr=0;
+  const t = document.getElementById('usersTable');
+  t.innerHTML="";
 
-    let totalAmount = 0;
-    let totalFees = 0;
-    let totalReceived = 0;
+  users.forEach(u=>{
+    ta+=+u.amount;
+    tf+=+u.fees;
+    tr+=+u.recoveryAmount;
 
-    if (!Array.isArray(users) || users.length === 0) {
-      table.innerHTML = `
-        <tr>
-          <td colspan="14">Aucun transfert trouvé</td>
-        </tr>`;
-      return;
-    }
+    t.innerHTML+=`
+    <tr>
+      <td>${u.senderFirstName}</td>
+      <td>${u.amount}</td>
+      <td>${u.fees}</td>
+      <td>${u.receiverFirstName}</td>
+      <td>${u.recoveryAmount}</td>
+      <td>${u.code}</td>
+      <td>${new Date(u.createdAt).toLocaleString()}</td>
+    </tr>`;
+  });
 
-    users.forEach(user => {
-      const amount = Number(user.amount) || 0;
-      const fees = Number(user.fees) || 0;
-      const received = Number(user.recoveryAmount) || 0;
-
-      totalAmount += amount;
-      totalFees += fees;
-      totalReceived += received;
- 
-      const row = document.createElement('tr');
-      row.innerHTML = `
-        <td>${user.senderFirstName}</td>
-        <td>${user.senderLastName}</td>
-        <td>${user.senderPhone}</td>
-        <td>${user.originLocation}</td>
-        <td class="amount">${amount}</td>
-        <td>${fees}</td>
-        <td class="code">${user.code}</td>
-
-        <td>${user.receiverFirstName}</td>
-        <td>${user.receiverLastName}</td>
-        <td>${user.receiverPhone}</td>
-        <td>${user.destinationLocation}</td>
-        <td class="amount">${received}</td>
-        <td>${user.recoveryMode}</td>
-        <td class="date">${new Date(user.createdAt).toLocaleString()}</td>
-      `;
-      table.appendChild(row);
-    }); 
-
-    document.getElementById('totalAmount').value = totalAmount.toLocaleString();
-    document.getElementById('totalFees').value = totalFees.toLocaleString();
-    document.getElementById('totalReceived').value = totalReceived.toLocaleString();
-
-  } catch (err) {
-    document.getElementById('usersTable').innerHTML = `
-      <tr>
-        <td colspan="14" style="color:red;">Erreur serveur</td>
-      </tr>`;
-  }
+  totalAmount.value = ta;
+  totalFees.value = tf;
+  totalReceived.value = tr;
 }
 </script>
-   
+
 </body>
 </html>
