--- a/list-users.html
+++ b/list-users.html
@@ -34,13 +34,40 @@ th {
     color: white;
 }
 
+/* Groupes */
 .group-exp {
-    background: #e9f1ff;
+    background: #e3ecff;
     font-weight: bold;
 }
 
 .group-dest {
-    background: #eaffea;
+    background: #e6f7ea;
+    font-weight: bold;
+}
+
+/* 🎨 Couleurs intelligentes par cellule */
+.origin {
+    background: #eef4ff;
+}
+
+.destination {
+    background: #ecfff1;
+}
+
+.amount {
+    font-weight: bold;
+    color: #004085;
+}
+
+.recovery {
+    font-weight: bold;
+    color: #155724;
+}
+
+/* Totaux */
+tfoot td {
+    background: #222;
+    color: white;
     font-weight: bold;
 }
 </style>
@@ -83,6 +110,8 @@ th {
     <td colspan="14">Chargement...</td>
 </tr>
 </tbody>
+
+<tfoot id="totalsRow"></tfoot>
 </table>
 
 <script>
@@ -92,7 +121,10 @@ async function loadUsers() {
         const users = await res.json();
 
         const table = document.getElementById('usersTable');
+        const totalsRow = document.getElementById('totalsRow');
+
         table.innerHTML = '';
+        totalsRow.innerHTML = '';
 
         if (!users.length) {
             table.innerHTML = `
@@ -102,7 +134,13 @@ async function loadUsers() {
             return;
         }
 
+        let totalAmount = 0;
+        let totalRecovery = 0;
+
         users.forEach(user => {
+            totalAmount += Number(user.amount);
+            totalRecovery += Number(user.recoveryAmount);
+
             const row = document.createElement('tr');
 
             row.innerHTML = `
@@ -110,8 +148,8 @@ async function loadUsers() {
                 <td>${user.senderFirstName}</td>
                 <td>${user.senderLastName}</td>
                 <td>${user.senderPhone}</td>
-                <td>${user.originLocation}</td>
-                <td>${user.amount}</td>
+                <td class="origin">${user.originLocation}</td>
+                <td class="amount">${user.amount}</td>
                 <td>${user.fees}</td>
                 <td>${user.code}</td>
 
@@ -119,8 +157,8 @@ async function loadUsers() {
                 <td>${user.receiverFirstName}</td>
                 <td>${user.receiverLastName}</td>
                 <td>${user.receiverPhone}</td>
-                <td>${user.destinationLocation}</td>
-                <td>${user.recoveryAmount}</td>
+                <td class="destination">${user.destinationLocation}</td>
+                <td class="recovery">${user.recoveryAmount}</td>
                 <td>${user.recoveryMode}</td>
 
                 <td>${new Date(user.createdAt).toLocaleString()}</td>
@@ -128,6 +166,16 @@ async function loadUsers() {
 
             table.appendChild(row);
         });
+
+        /* ✅ Ligne des totaux */
+        totalsRow.innerHTML = `
+        <tr>
+            <td colspan="4">TOTAL</td>
+            <td>${totalAmount}</td>
+            <td colspan="6"></td>
+            <td>${totalRecovery}</td>
+            <td colspan="2"></td>
+        </tr>`;
 
     } catch (err) {
         console.error(err);
